--- a/index.html
+++ b/index.html
@@ -23,34 +23,37 @@
       >
         <div class="ancients-container">
           <div
-            class="ancient-card"
+            class="ancient-card Azathoth"
             style="
               background-image: url('./assets/Ancients/Azathoth.png');
             "
           ></div>
           <div
-            class="ancient-card"
+            class="ancient-card Cthulthu"
             style="
               background-image: url('./assets/Ancients/Cthulthu.png');
             "
           ></div>
           <div
-            class="ancient-card"
+            class="ancient-card IogSothoth"
             style="
               background-image: url('./assets/Ancients/IogSothoth.png');
             "
           ></div>
           <div
-            class="ancient-card active"
+            class="ancient-card active ShubNiggurath"
             style="
               background-image: url('./assets/Ancients/ShubNiggurath.png');
             "
           ></div>
         </div>
         <div class="difficulty-container">
+          <div class="difficulty active">Очень низкая</div>
           <div class="difficulty active">Низкая</div>
           <div class="difficulty">Средняя</div>
           <div class="difficulty">Высокая</div>
+          <div class="difficulty">Очень высокая</div>
+          <div class="makeDeck">Создать колоду</div>
         </div>
         <div class="deck-container">
           <div class="current-state">
@@ -88,12 +91,14 @@
           <div
             class="last-card"
             style="
-              background-image: url('/static/media/brown17.6a53cc04a2d6cbb63677.png');
+              background-image: url('./assets/MythicCards/brown/brown17.png');
             "
           ></div>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <!-- <script type="module" src="./data/ancients.js"></script> -->
+    <!-- <script type="module" src="./data/difficulties.js"></script> -->
+    <script type="module" src="script.js"></script>
   </body>
 </html>
