--- a/index.html
+++ b/index.html
@@ -8,54 +8,41 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Codejam Demo</title>
-    
+    <title>Codejam</title>
+
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div
-        class="App"
-        style="
-          background-image: url('./assets/home.png');
-        "
-      >
+    
+
+      <div class="app" style="background-image: url('./assets/home.png')">
         <div class="ancients-container">
           <div
             class="ancient-card Azathoth"
-            style="
-              background-image: url('./assets/Ancients/Azathoth.png');
-            "
+            style="background-image: url('./assets/Ancients/Azathoth.png')"
           ></div>
           <div
             class="ancient-card Cthulthu"
-            style="
-              background-image: url('./assets/Ancients/Cthulthu.png');
-            "
+            style="background-image: url('./assets/Ancients/Cthulthu.png')"
           ></div>
           <div
             class="ancient-card IogSothoth"
-            style="
-              background-image: url('./assets/Ancients/IogSothoth.png');
-            "
+            style="background-image: url('./assets/Ancients/IogSothoth.png')"
           ></div>
           <div
-            class="ancient-card active ShubNiggurath"
-            style="
-              background-image: url('./assets/Ancients/ShubNiggurath.png');
-            "
+            class="ancient-card ShubNiggurath"
+            style="background-image: url('./assets/Ancients/ShubNiggurath.png')"
           ></div>
         </div>
         <div class="difficulty-container">
-          <div class="difficulty active">Очень низкая</div>
-          <div class="difficulty active">Низкая</div>
-          <div class="difficulty">Средняя</div>
-          <div class="difficulty">Высокая</div>
-          <div class="difficulty">Очень высокая</div>
-          <div class="makeDeck">Создать колоду</div>
+          <div class="difficulty veryEasy hidden">Очень низкая</div>
+          <div class="difficulty easy hidden">Низкая</div>
+          <div class="difficulty normal hidden">Средняя</div>
+          <div class="difficulty hard hidden">Высокая</div>
+          <div class="difficulty veryHard hidden">Очень высокая</div>
+          <div class="makeDeck hidden">Создать колоду</div>
         </div>
-        <div class="deck-container">
+        <div class="deck-container hidden">
           <div class="current-state">
             <div class="stage-container">
               <span class="stage-text">Первая стадия</span>
@@ -84,21 +71,15 @@
           </div>
           <div
             class="deck"
-            style="
-              background-image: url('./assets/mythicCardBackground.png');
-            "
+            style="background-image: url('./assets/mythicCardBackground.png')"
           ></div>
           <div
             class="last-card"
-            style="
-              background-image: url('./assets/MythicCards/brown/brown17.png');
-            "
+
           ></div>
         </div>
       </div>
-    </div>
-    <!-- <script type="module" src="./data/ancients.js"></script> -->
-    <!-- <script type="module" src="./data/difficulties.js"></script> -->
+ 
     <script type="module" src="script.js"></script>
   </body>
 </html>
