feat: add counter logic, animations, details.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site"
     />
     <title>Codejam</title>
 
@@ -35,37 +35,37 @@
           ></div>
         </div>
         <div class="difficulty-container">
-          <div class="difficulty veryEasy hidden">Очень низкая</div>
-          <div class="difficulty easy hidden">Низкая</div>
-          <div class="difficulty normal hidden">Средняя</div>
-          <div class="difficulty hard hidden">Высокая</div>
-          <div class="difficulty veryHard hidden">Очень высокая</div>
-          <div class="makeDeck hidden">Создать колоду</div>
+          <div class="difficulty veryEasy hidden">Very easy</div>
+          <div class="difficulty easy hidden">Easy</div>
+          <div class="difficulty normal hidden">Normal</div>
+          <div class="difficulty hard hidden">Hard</div>
+          <div class="difficulty veryHard hidden">Nightmare</div>
+          <div class="makeDeck hidden">Build a deck</div>
         </div>
         <div class="deck-container hidden">
           <div class="current-state">
             <div class="stage-container">
-              <span class="stage-text">Первая стадия</span>
+              <span class="stage-text firstStageTxt">First stage</span>
               <div class="dots-container">
-                <div class="dot green"></div>
-                <div class="dot brown"></div>
-                <div class="dot blue"></div>
+                <div class="dot green st1green"></div>
+                <div class="dot brown st1brown"></div>
+                <div class="dot blue st1blue"></div>
               </div>
             </div>
             <div class="stage-container">
-              <span class="stage-text">Вторая стадия</span>
+              <span class="stage-text secondStageTxt">Second stage</span>
               <div class="dots-container">
-                <div class="dot green"></div>
-                <div class="dot brown"></div>
-                <div class="dot blue"></div>
+                <div class="dot green st2green"></div>
+                <div class="dot brown st2brown"></div>
+                <div class="dot blue st2blue"></div>
               </div>
             </div>
             <div class="stage-container">
-              <span class="stage-text">Третья стадия</span>
+              <span class="stage-text thirdStageTxt">Third stage</span>
               <div class="dots-container">
-                <div class="dot green"></div>
-                <div class="dot brown"></div>
-                <div class="dot blue"></div>
+                <div class="dot green st3green"></div>
+                <div class="dot brown st3brown"></div>
+                <div class="dot blue st3blue"></div>
               </div>
             </div>
           </div>
